Fixing cursor background being off center relative to cursor

--- a/src/Assets/CSS/main.css
+++ b/src/Assets/CSS/main.css
@@ -16,7 +16,7 @@
     mix-blend-mode: difference;
     background-color: white;
     z-index: 1000;
-    scale: 1.5;
+    transform-origin: center;
 }
 
 body {
